# TopoPhase

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml
api/: main.py  schemas.py  simulator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: websocket.js
frontend/src/components/: BettiTimeline.jsx  EarlyWarningBadge.jsx  LatticeView.jsx  PersistenceDiagram.jsx  PhaseAlertPanel.jsx  SpectralGapChart.jsx
frontend/src/lib/: websocket.js
frontend/src/store/: useSimStore.js
gnn/: features.py  generate_data.py  model.py  train.py
sim/: correlations.py  lattice.py
topo/: graph_builder.py  homology.py  spectral.py  wasserstein.py
