[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topophase"
version = "0.1.0"
requires-python = ">=3.11"
description = "Real-time Topological Quantum Phase Transition Detector"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",
    "gudhi>=3.9",
    "torch>=2.2",
    "torch_geometric>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]
